# asfalto

./: .gitignore  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  THIRD_PARTY_LICENSES.txt  build-docs.sh  pyproject.toml
docs/: about.html  changelog.html  faqs.html  genindex.html  index.html  licenses.html  modules.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  user-guide.html
docs-src/source/: conf.py  faqs.rst  index.rst  user-guide.rst
docs-src/source/_tables/: bottom-up-example-template_sheet.csv  motor-template_sheet-populated.csv
docs-src/source/api-pages/: asfalto.imports.rst  asfalto.populate.rst  asfalto.template.rst  asfalto.utils.rst  asfalto.verify.rst
docs-src/source/license-info/: all-licenses.rst  licenses.rst
docs-src/source/user-guide-pages/: breaking-abstraction.rst  creating-templates.rst  installation.rst  introduction.rst  normalization.rst  null-vs-none.rst
docs/_sources/: about.rst.txt  quickstart.rst.txt
docs/_sources/api-pages/: asfalto.cli.rst.txt  asfalto.rst.txt  modules.rst.txt
docs/_sources/user-guide/: user-guide.rst.txt
docs/_sources/user-guide-pages/: breaking-abstraction.rst.txt  creating-templates.rst.txt  installation.rst.txt  introduction.rst.txt  normalization.rst.txt  null-vs-none.rst.txt
docs/_static/: custom.css
docs/api-pages/: asfalto.cli.html  asfalto.html  asfalto.imports.html  asfalto.populate.html  asfalto.template.html  asfalto.utils.html  asfalto.verify.html  cemento.axioms.html  cemento.axioms.modules.html  cemento.cli.html  cemento.draw_io.html  cemento.html  cemento.rdf.html  cemento.utils.html  modules.html
docs/license-info/: all-licenses.html  licenses.html
docs/user-guide-pages/: axioms-overview.html  breaking-abstraction.html  cli-guide.html  creating-templates.html  drawing-basics.html  installation.html  introduction.html  normalization.html  null-vs-none.html  scripting.html
examples/bottom-up-example/: bottom-up-example.drawio  bottom-up-example.ttl
examples/happy-example/: happy.drawio  happy.ttl
examples/motor-example/: motor-declarations.ttl  motor-expanded.ttl  motor-final.ttl  motor-template.stottr  motor-template_sheet.csv  motor.drawio  motor.ttl
examples/slit-example/: slit-example-declarations.ttl  slit-example-expanded.ttl  slit-example-final.ttl  slit-example-template.stottr  slit-example-template_sheet.csv  slit-example.drawio  slit-example.ttl
examples/templates/: quality-person.drawio  quality-person.ttl  read-epics-variable.drawio  read-epics-variable.ttl  variable.drawio  variable.ttl
figures/: do-not-input-this-happy-example-fig-1.drawio  do-not-input-this-motor-example-fig-1.drawio  do-not-input-this-motor-example-fig-2.drawio  do-not-input-this-motor-example-fig-3.drawio  do-not-input-this-slit-example-explainer.drawio
scripts/: build_linux.sh
src/asfalto/: main.backup.py  main.py
src/asfalto/cli/: constants.py  expand_template.py  gen_template.py  merge_template_files.py  normalize.py  setup_java.py  verify.py
src/asfalto/data/: default_prefixes.json
src/asfalto/imports/: constants.py  download.py  java.py
src/asfalto/populate/: normalize.py
src/asfalto/template/: constants.py  expand.py  generate_template.py  io.py  merge.py  preprocessing.py  read.py  (+1 more)
(+3 files in other folders)
