[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asfalto-test"
version = "0.1.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Add your description here"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
asfalto = "asfalto.main:run_robot"

[tool.setuptools.package-data]
# This ensures the JAR is included in the installation
"asfalto.bin" = ["*.jar", "jre/**"]