[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asfalto"
version = "0.1.2"
authors = [{ name = "Gabriel Obsequio Ponon", email = "gop2@case.edu" }]
description = "A package to create, generate and use ontology templates."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
dependencies = [
    "argo-proxy>=2.7.7",
    "black>=25.9.0",
    "build>=1.3.0",
    "cemento>=0.13.0",
    "git-filter-repo>=2.47.0",
    "importlib>=1.0.4",
    "more-itertools>=10.8.0",
    "openai>=2.2.0",
    "openpyxl>=3.1.5",
    "rdflib>=7.2.1",
    "setuptools>=80.9.0",
]

[project.urls]
Homepage = "https://github.com/Gabbyton/asfalto"
Issues = "https://github.com/Gabbyton/asfalto/issues"

[project.scripts]
asfalto = "asfalto.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "build>=1.4.2",
    "coverage>=7.13.5",
    "myst-parser>=4.0.1",
    "pip-licenses>=5.5.5",
    "pydata-sphinx-theme>=0.16.1",
    "pytest>=9.0.2",
    "sphinx>=8.1.3",
    "sphinx-design>=0.6.1",
    "sphinx-iframes>=1.2.0",
    "sphinxcontrib-shtest>=0.5.0",
    "twine>=6.2.0",
]
